Fix boards alignment

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -45,7 +45,7 @@
 .gameboards {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
 
   &>div {
